--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,4 +1,12 @@
 2023-07-07  Release Manager
+2020-05-19  Kito Cheng  <kito.cheng@sifive.com>
+
+	* gcc.target/riscv/arch-3.c: Adjust option.
+	* gcc.target/riscv/arch-5.c: New.
+	* gcc.target/riscv/attribute-9.c: Adjust option and test
+	condition.
+
+2020-05-19  Patrick Palka  <ppalka@redhat.com>
 
 	* GCC 10.5.0 released.
 
