Fix typo in chapter level for RISC-V attributes
The "RISC-V specific attributes" section should be at the same level
as "PowerPC-specific attributes".

gcc/ChangeLog:

	* doc/sourcebuild.texi: Fix chapter level.

Signed-off-by: Torbjörn SVENSSON  <torbjorn.svensson@foss.st.com>

--- a/gcc/doc/sourcebuild.texi
+++ b/gcc/doc/sourcebuild.texi
@@ -2145,7 +2145,7 @@ PowerPC target supports executing AltiVec instructions.
 PowerPC target supports executing VSX instructions (ISA 2.06).
 @end table
 
-@subsection RISC-V specific attributes
+@subsubsection RISC-V specific attributes
 
 @table @code
 
