--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -1144,7 +1144,9 @@ See RS/6000 and PowerPC Options.
 -mstack-protector-guard=@var{guard}  -mstack-protector-guard-reg=@var{reg} @gol
 -mstack-protector-guard-offset=@var{offset}
 -mcsr-check -mno-csr-check @gol
--minline-strlen  -mno-inline-strlen}
+-minline-strlen  -mno-inline-strlen
+-minline-strcmp  -mno-inline-strcmp
+-minline-strncmp  -mno-inline-strncmp}
 
 @emph{RL78 Options}
 @gccoptlist{-msim  -mmul=none  -mmul=g13  -mmul=g14  -mallregs @gol
@@ -25464,15 +25466,6 @@ Do or don't use smaller but slower prologue and epilogue code that uses
 library function calls.  The default is to use fast inline prologues and
 epilogues.
 
-<<<<<<< HEAD
-=======
-@opindex minline-atomics
-@item -minline-atomics
-@itemx -mno-inline-atomics
-Do or don't use smaller but slower subword atomic emulation code that uses
-libatomic function calls.  The default is to use fast inline subword atomics
-that do not require libatomic.
-
 @opindex minline-strlen
 @item -minline-strlen
 @itemx -mno-inline-strlen
@@ -25481,8 +25474,23 @@ Inlining will only be done if the string is properly aligned
 and instructions for accelerated processing are available.
 The default is to not inline strlen calls.
 
+@opindex minline-strcmp
+@item -minline-strcmp
+@itemx -mno-inline-strcmp
+Do or do not attempt to inline strcmp calls if possible.
+Inlining will only be done if the strings are properly aligned
+and instructions for accelerated processing are available.
+The default is to not inline strcmp calls.
+
+@opindex minline-strncmp
+@item -minline-strncmp
+@itemx -mno-inline-strncmp
+Do or do not attempt to inline strncmp calls if possible.
+Inlining will only be done if the strings are properly aligned
+and instructions for accelerated processing are available.
+The default is to not inline strncmp calls.
+
 @opindex mshorten-memrefs
->>>>>>> df48285b248... riscv: Add support for strlen inline expansion
 @item -mshorten-memrefs
 @itemx -mno-shorten-memrefs
 @opindex mshorten-memrefs
